<resources>
    <string name="app_name">mapper</string>

    <string name="app_description">mark and discover places</string>

    <!--HomePageActivity-->
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="get_started">Get started</string>

    <!--LoginActivity-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="next">Next</string>

    <!--HomeActivity-->
    <string name="recent">Recent</string>
    <string name="saved">Saved</string>
    <string name="view">View</string>

    <!--GetStartedActivity-->
    <string name="add_photo">Add a profile photo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>

    <!--NavigationDrawer-->
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="search">Search</string>
    <string name="friends">Friends</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">mapper</string>
    <string name="nav_header_subtitle">support@mapper.io</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="action_settings">Settings</string>

    <!--Marker-->
    <string name="description">Description</string>
    <string name="author">Posted by</string>
    <string name="address">Address</string>
    <string name="category">Category</string>
    <string name="get_directions">Get directions</string>

    <!--Services-->
    <string name="progress_uploading">Background service: uploading</string>
    <string name="progress_downloading">Background service: downloading</string>
    <string name="upload_success">Background service: success</string>
    <string name="upload_failure">Background service: failure</string>
    <string name="download_success">Background service: success</string>
    <string name="download_failure">Background service: failure</string>

    <!--New Marker Activity-->
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="browse_or_capture">Browse or capture</string>
    <string name="confirmation_text">I am aware this marker will include my current location</string>

    <!--New Marker Detail Activity-->
    <string name="describe_this_place">Describe this place...</string>
    <string name="share">Share</string>
    <string name="marker_about">You are allowed to add multimedia content to your marker. You can add a photo, video or audio files either from device or capture them instantly with a camera or microphone</string>
    <string-array name="categories">
        <item>Travel</item>
        <item>Nature</item>
        <item>Music</item>
        <item>Food</item>
        <item>Avoid</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
