<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/drawerHome"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/home"/>

    <item android:id="@+id/drawerDiscover"
        android:icon="@drawable/ic_discover"
        android:title="@string/discover"/>

    <item android:id="@+id/drawerSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/search"/>

    <item android:id="@+id/drawerFriends"
        android:icon="@drawable/ic_social"
        android:title="@string/friends"/>

    <item android:id="@+id/drawerStatistics"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics"/>

    <item android:id="@+id/drawerSettings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"/>

</menu>