<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/navigationHome"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/home"/>

        <item android:id="@+id/navigationDiscover"
            android:icon="@drawable/ic_discover"
            android:title="@string/discover"/>

        <item android:id="@+id/navigationSearch"
            android:icon="@drawable/ic_search"
            android:title="@string/search"/>

        <item android:id="@+id/navigationFriends"
            android:icon="@drawable/ic_social"
            android:title="@string/friends"/>
    </group>

    <item android:title="@string/miscellaneous">
        <menu>
            <item android:id="@+id/navigationStatistics"
                android:icon="@drawable/ic_statistics"
                android:title="@string/statistics"/>

            <item android:id="@+id/navigationSettings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>
        </menu>
    </item>

</menu>
