<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.GetStartedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/getStartedPreviewImage"
            android:src="@drawable/ic_camera_blend"
            android:tint="@color/altTextColor"
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_height="200dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_camera"
                android:tint="@color/altTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/getStartedAddPhoto"
                android:layout_marginStart="4dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/altTextColor"
                android:text="@string/add_photo"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/getStartedNameEditText"
            android:maxLines="1"
            android:hint="@string/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/getStartedLastNameEditText"
            android:maxLines="1"
            android:hint="@string/last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <EditText
        android:id="@+id/getStartedEmailEditText"
        android:maxLines="1"
        android:layout_margin="8dp"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/getStartedPasswordEditText"
        android:maxLines="1"
        android:layout_margin="8dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_phone"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <EditText
            android:id="@+id/getStartedPhoneEditText"
            android:maxLines="1"
            android:layout_margin="8dp"
            android:hint="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/getStartedNextButton"
            android:layout_width="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textAllCaps="true"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_blue"
            android:text="@string/next"
            android:textColor="@color/altTextColor" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/getStartedProgressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</LinearLayout>