<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/altTextColor"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="36dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/mapper_logo" />
    
    <EditText
        android:id="@+id/loginUsernameEditText"
        android:layout_width="match_parent"
        android:hint="@string/username"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/loginPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textColor="@color/mainTextColor"
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/loginNextButton"
            android:layout_width="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginEnd="16dp"
            android:textAllCaps="true"
            android:layout_marginStart="16dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="24dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_blue"
            android:text="@string/next"
            android:textColor="@color/altTextColor" />
    </RelativeLayout>



</LinearLayout>